# simple-cmake-demo

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
